--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
     "sequelize": "^4.33.4"
   }
